DDF-2025 Add default methods for backwards compatibility

--- a/distribution/docs/src/main/resources/_contents/_platform-contents/extending-platform-contents.adoc
+++ b/distribution/docs/src/main/resources/_contents/_platform-contents/extending-platform-contents.adoc
@@ -5,6 +5,7 @@ This section supports developers creating extensions of the existing framework.
 
 The following packages have been exported by the ${ddf-platform} application and are approved for use by third parties:
 
+* `${ddf-branding-lowercase}.action`
 * `${ddf-branding-lowercase}.security`
 * `${ddf-branding-lowercase}.security.assertion`
 * `${ddf-branding-lowercase}.security.common.audit`
